@@ -4,6 +4,9 @@ import by.mosquitto.dto.CommentDto;
 import by.mosquitto.entity.Comment;
 import by.mosquitto.entity.News;
 import by.mosquitto.entity.User;
+import by.mosquitto.exception.CommentNotFoundException;
+import by.mosquitto.exception.NewsNotFoundException;
+import by.mosquitto.exception.UserNotFoundException;
 import by.mosquitto.mapper.CommentMapper;
 import by.mosquitto.repository.CommentRepository;
 import by.mosquitto.repository.NewsRepository;
@@ -15,9 +18,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static by.mosquitto.mapper.CommentMapper.toDto;
 
 @Service
 @RequiredArgsConstructor
@@ -31,17 +31,17 @@ public class CommentServiceManager implements CommentService {
     public List<CommentDto> getAllComments() {
         return commentRepository.findAll().stream()
                 .map(CommentMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional
     public CommentDto createComment(CommentDto dto) {
         News news = newsRepository.findById(dto.getNewsId())
-                .orElseThrow(() -> new RuntimeException("News not found: " + dto.getNewsId()));
+                .orElseThrow(() -> new NewsNotFoundException(dto.getNewsId()));
 
         User user = userRepository.findById(dto.getUserId())
-                .orElseThrow(() -> new RuntimeException("User not found: " + dto.getUserId()));
+                .orElseThrow(() -> new UserNotFoundException(dto.getUserId()));
 
         Comment comment = Comment.builder()
                 .text(dto.getText())
@@ -50,40 +50,40 @@ public class CommentServiceManager implements CommentService {
                 .createdByUser(user)
                 .build();
 
-        return toDto(commentRepository.save(comment));
+        return CommentMapper.toDto(commentRepository.save(comment));
     }
 
     @Override
     public CommentDto getComment(Long id) {
         Comment comment = commentRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Comment not found: " + id));
-        return toDto(comment);
+                .orElseThrow(() -> new CommentNotFoundException(id));
+        return CommentMapper.toDto(comment);
     }
 
     @Override
     public List<CommentDto> getCommentsByNews(Long newsId) {
         return commentRepository.findByNewsId(newsId).stream()
                 .map(CommentMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional
     public CommentDto updateComment(Long id, CommentDto dto) {
         Comment comment = commentRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Comment not found: " + id));
+                .orElseThrow(() -> new CommentNotFoundException(id));
 
         comment.setText(dto.getText());
         comment.setLastEditDate(LocalDateTime.now());
 
-        return toDto(commentRepository.save(comment));
+        return CommentMapper.toDto(commentRepository.save(comment));
     }
 
     @Override
     @Transactional
     public void deleteComment(Long id) {
         if (!commentRepository.existsById(id)) {
-            throw new RuntimeException("Comment not found: " + id);
+            throw new CommentNotFoundException(id);
         }
         commentRepository.deleteById(id);
     }
