@@ -2,20 +2,16 @@ package by.mosquitto.service;
 
 import by.mosquitto.dto.UserDto;
 import by.mosquitto.entity.User;
+import by.mosquitto.exception.UserNotFoundException;
 import by.mosquitto.mapper.UserMapper;
 import by.mosquitto.repository.UserRepository;
 import by.mosquitto.service.contract.UserService;
-import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static by.mosquitto.mapper.UserMapper.toDto;
-import static by.mosquitto.mapper.UserMapper.toEntity;
 
 @Service
 @RequiredArgsConstructor
@@ -27,29 +23,29 @@ public class UserServiceManager implements UserService {
     @Override
     public UserDto getById(Long id) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + id));
-        return toDto(user);
+                .orElseThrow(() -> new UserNotFoundException(id));
+        return UserMapper.toDto(user);
     }
 
     @Override
     public List<UserDto> getAll() {
         return userRepository.findAll().stream()
                 .map(UserMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public UserDto create(UserDto userDto) {
-        User user = toEntity(userDto);
+        User user = UserMapper.toEntity(userDto);
         user.setCreationDate(LocalDateTime.now());
         User saved = userRepository.save(user);
-        return toDto(saved);
+        return UserMapper.toDto(saved);
     }
 
     @Override
     public UserDto update(Long id, UserDto userDto) {
         User existing = userRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + id));
+                .orElseThrow(() -> new UserNotFoundException(id));
 
         existing.setUsername(userDto.getUsername());
         existing.setPassword(userDto.getPassword());
@@ -58,13 +54,13 @@ public class UserServiceManager implements UserService {
         existing.setParentName(userDto.getParentName());
         existing.setLastEditDate(LocalDateTime.now());
 
-        return toDto(userRepository.save(existing));
+        return UserMapper.toDto(userRepository.save(existing));
     }
 
     @Override
     public void delete(Long id) {
         if (!userRepository.existsById(id)) {
-            throw new EntityNotFoundException("User not found with id: " + id);
+            throw new UserNotFoundException(id);
         }
         userRepository.deleteById(id);
     }
